Added lib folder

--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
         <div id="screen"></div>
 
         <!-- melonJS Library -->
-        <script type="text/javascript" src="melonJS-1.1.0.js"></script>       
+        <script type="text/javascript" src="lib/melonJS-1.1.0.js"></script>       
 
         <!-- Game Scripts -->
         <script type="text/javascript" src="js/game.js"></script>
